2A/05_Projet_GL/src/test/deca/context/invalid/complet/71_declClass_super_int.deca
// Description :
//  class super de type int 
// Resultats :
//    ligne 11 : nature attendu du int : classe
// Historique : 
//  cree le 16/01/2024

class A extends int {
    
}